# multipath-simulation

./: .gitignore  2026-02-03.alm  AirPixel_logo.glb  CLAUDE.md  CMakeLists.txt  LondonTest.kml  README.md  RED_Komodo.ulens  RED_Komodo_calibration.json  StartFinishDataBase.xml  UrsaG2_prime.ulens  VBO file description.txt  VIPS_Universal_Protocol.txt  audi.json  build.bat  opticalAudioTransmitter.ino  recording_stats.txt
materials/: background.filamat  background.mat  ghost_car.mat  imgui.filamat  imgui.mat  lens_distortion.filamat  lens_distortion.mat  line.mat  logo_material.filamat  logo_material.mat  red_material.filamat  red_material.mat  scoreboard_material.filamat  scoreboard_material.mat  shadow_plane.filamat  shadow_plane.mat  shadow_test.mat  video_quad.filamat  video_quad.mat
scripts/: create_3d_logo.py
src/: ConeGenerator.cpp  ConeGenerator.h  FilamentApp.h  GNSSAlmanac.cpp  GNSSAlmanac.h  GNSSApp.cpp  GNSSApp.h  GNSSRayTrace.cpp  GNSSRayTrace.h  GhostCarApp.cpp  GhostCarApp.h  ImGuiFilamentBridge.cpp  ImGuiFilamentBridge.h  ImGuiPanel.cpp  ImGuiPanel.h  LensDistortion.cpp  LensDistortion.h  Recording.cpp  Recording.h  SceneManager.cpp  SceneManager.h  TrackingSystem.cpp  TrackingSystem.h  Types.h  VboParser.cpp  VboParser.h  WebcamCapture.cpp  WebcamCapture.h  ghostcar_main.cpp  gnss_main.cpp  main.cpp
tools/: CMakeLists.txt  distortion_preview.cpp
